--- a/app/css/media.css
+++ b/app/css/media.css
@@ -49,6 +49,12 @@
     width: 210px;
     margin-left: 20px;
   }
+  .main-content__inform {
+    padding: 20px;
+  }
+  .main-content__inform-block-item {
+    width: 33.33333%;
+  }
   /**/
 }
 
@@ -119,6 +125,15 @@
   .main-content__top-img {
     margin-left: -2.1%;
     width: 104.2%;
+  }
+  .main-content__slider, .main-content__inform {
+    display: block;
+    width: 105%;
+    margin-left: -2.5%;
+    height: auto;
+  }
+  .main-content__slider img, .main-content__inform img {
+    width: 100%;
   }
   /**/
 }
@@ -317,11 +332,70 @@
     height: 40px;
     line-height: 40px;
   }
+  .copyright__right {
+    width: 100%;
+    float: none;
+    text-align: center;
+  }
+  .copyright__left {
+    width: 100%;
+    float: none;
+    text-align: center;
+  }
+  .main-content__slider-text-title {
+    font-size: 24px;
+    line-height: 30px;
+  }
+  .main-content__slider-text {
+    left: 10px;
+    bottom: 40px;
+  }
+  .main-content__slider .slick-dots {
+    bottom: 10px;
+    right: 9px;
+  }
+  .main-content__inform-block-item {
+    width: 100%;
+    border-bottom: 1px solid #fff;
+    margin-top: 20px;
+    padding-bottom: 20px;
+    float: none;
+    padding-left: 84px;
+  }
+  .main-content__inform-block-item:last-child {
+    border-bottom: none;
+  }
+  .main-content__inform {
+    padding: 0;
+  }
+  .main-content__inform-block-circle {
+    left: 10px;
+  }
+  .main-content__partners-item {
+    width: 50%;
+  }
+  .main-content__partners-item img {
+    width: 120px;
+    height: auto;
+  }
+  .main-content__bslider {
+    margin-bottom: 26px;
+  }
+  .pop-up, .pop-up-ok {
+    width: 80%;
+  }
   /**/
 }
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width: 480px) {
+  .pop-up, .pop-up-ok {
+    width: 105%;
+    margin-left: -2.5%;
+  }
+  .mfp-close {
+    display: none;
+  }
   /**/
 }
 
