--- a/app/css/main.css
+++ b/app/css/main.css
@@ -250,12 +250,16 @@ a:hover, a:active, a:focus {
   height: 24px;
   background-image: url(../img/prod-slider/s-arrow.png);
   background-repeat: no-repeat;
-  background-position: left center;
+  background-position: left top;
   position: absolute;
   left: 50%;
   margin-left: -7.5px;
   top: 50%;
   margin-top: -12px;
+}
+
+.sl2 .slick-prev:hover::after {
+  background-position: left bottom;
 }
 
 .sl2 .slick-next {
@@ -268,12 +272,16 @@ a:hover, a:active, a:focus {
   height: 24px;
   background-image: url(../img/prod-slider/s-arrow.png);
   background-repeat: no-repeat;
-  background-position: right center;
+  background-position: right top;
   position: absolute;
   left: 50%;
   margin-left: -7.5px;
   top: 50%;
   margin-top: -12px;
+}
+
+.sl2 .slick-next:hover::after {
+  background-position: right bottom;
 }
 
 .popup-img-active {
@@ -321,6 +329,14 @@ a:hover, a:active, a:focus {
   padding-left: 1.5px !important;
   right: -42px !important;
   top: -42px !important;
+}
+
+.main-content__inform ul li a:hover .main-content__inform-block-title {
+  text-decoration: underline;
+}
+
+.main-content__card-slider img {
+  cursor: pointer;
 }
 
 body {
@@ -607,6 +623,7 @@ body {
   height: 20px;
   display: block;
   background-position: 0 -48px;
+  cursor: pointer;
 }
 
 .nav-toggle {
@@ -619,6 +636,10 @@ body {
   padding: 0 10px;
   z-index: 1;
   display: none;
+  z-index: 998;
+  -webkit-box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.15), inset 0px 5px 5px 0px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.15), inset 0px 5px 5px 0px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.15), inset 0px 5px 5px 0px rgba(0, 0, 0, 0.15);
 }
 
 .nav-toggle .nav__item {
@@ -855,6 +876,14 @@ body {
   background-color: #820101;
 }
 
+.main-content__card-info-button:active {
+  color: #fefefe;
+}
+
+.main-content__card-info-button:focus {
+  color: #fefefe;
+}
+
 .main-content__card-info-button-wp {
   position: absolute;
   bottom: 30px;
@@ -912,11 +941,7 @@ body {
   background-color: rgba(81, 80, 82, 0.7);
 }
 
-.main-content__catalog-link:hover::after {
-  background-color: rgba(99, 34, 37, 0.7);
-}
-
-.main-content__catalog-link:hover::before {
+.main-content__catalog-link::before {
   content: '';
   position: absolute;
   width: 92%;
@@ -924,8 +949,22 @@ body {
   left: 4%;
   top: 4%;
   display: block;
-  border: 1px solid #fff;
+  border: 1px solid transparent;
   z-index: 999;
+}
+
+.main-content__catalog-link:hover::after {
+  background-color: rgba(99, 34, 37, 0.7);
+  -webkit-transition: all 0.5s ease-in-out;
+  -moz-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+
+.main-content__catalog-link:hover::before {
+  border: 1px solid #fff;
+  -webkit-transition: all 0.5s ease-in-out;
+  -moz-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 
 .main-content__catalog-text {
@@ -1236,7 +1275,7 @@ body {
   display: block;
 }
 
-.main-content__more::before {
+.main-content__more__bg::before {
   content: '';
   width: 100%;
   height: 30px;
@@ -1249,10 +1288,11 @@ body {
 }
 
 .main-content__more-button {
-  padding: 0 20px;
+  width: 116px;
+  margin: 0 auto;
   background-color: #c7c4c9;
   border-radius: 2px 2px 0 0;
-  display: inline-block;
+  display: block;
   line-height: 21px;
   color: #515052;
   font-size: 14px;
@@ -1649,7 +1689,7 @@ body {
   top: 60px;
   padding-bottom: 10px;
   display: none;
-  z-index: 999;
+  z-index: 997;
 }
 
 .sidebar-toggle-menu .sidebar-menu {
@@ -1868,8 +1908,51 @@ body {
   right: 0;
   z-index: 998;
   background-color: #f2eff4;
-  -webkit-box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.15);
-  -moz-box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.15);
-  box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.15), inset 0px 5px 5px 0px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.15), inset 0px 5px 5px 0px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.15), inset 0px 5px 5px 0px rgba(0, 0, 0, 0.15);
   display: none;
+}
+
+.mob-arow__wrapper {
+  width: 100%;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 68px;
+  z-index: 998;
+  display: block;
+  background-color: #f2eff4;
+  -webkit-box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.15), inset 0px 5px 5px 0px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.15), inset 0px 5px 5px 0px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.15), inset 0px 5px 5px 0px rgba(0, 0, 0, 0.15);
+  display: none;
+}
+
+.mob-arow__wrapper .pop-up__wrapper {
+  padding-left: 2%;
+  padding-right: 2%;
+}
+
+.mob-arow__wrapper .pop-up__button-wrapper {
+  left: 2%;
+  right: 2%;
+}
+
+.mob-arow__wrapper .pop-up__title {
+  font-size: 18px;
+  text-transform: none !important;
+  font-family: "MuseoSansRegular", sans-serif;
+}
+
+.mob-arow__wrapper .pop-up__p {
+  font-size: 14px;
+}
+
+.main-content__more-button-open {
+  display: none;
+}
+
+.main-content__bslider-item a b:hover {
+  text-decoration: underline;
 }
