--- a/sass/main.sass
+++ b/sass/main.sass
@@ -212,6 +212,7 @@ body
 		height: 20px
 		display: block
 		background-position: 0 -48px
+		cursor: pointer
 .nav-toggle
 	position: absolute
 	left: 0
@@ -222,6 +223,10 @@ body
 	padding: 0 10px
 	z-index: 1
 	display: none
+	z-index: 998
+	-webkit-box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.15), inset 0px 5px 5px 0px rgba(0,0,0,0.15)
+	-moz-box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.15), inset 0px 5px 5px 0px rgba(0,0,0,0.15)
+	box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.15), inset 0px 5px 5px 0px rgba(0,0,0,0.15)
 	@extend .clearfix
 	.nav__item
 		width: 50%
@@ -402,6 +407,10 @@ body
 					color: #fefefe
 					text-decoration: none
 					background-color: #820101
+				&:active
+					color: #fefefe
+				&:focus
+					color: #fefefe
 				&-wp
 					position: absolute
 					bottom: 30px
@@ -444,19 +453,23 @@ body
 				right: 0
 				bottom: 0
 				background-color: rgba(#515052,.7)
+			&::before
+				content: ''
+				position: absolute
+				width: 92%
+				height: 92%
+				left: 4%
+				top: 4%
+				display: block
+				border: 1px solid transparent
+				z-index: 999
 			&:hover
 				&::after
 					background-color: rgba(#632225,.7)
+					@include transition(all 0.5s ease-in-out)
 				&::before
-					content: ''
-					position: absolute
-					width: 92%
-					height: 92%
-					left: 4%
-					top: 4%
-					display: block
 					border: 1px solid #fff
-					z-index: 999
+					@include transition(all 0.5s ease-in-out)
 		&-text
 			position: absolute
 			left: 50px
@@ -689,21 +702,23 @@ body
 			left: 50%
 			margin-left: -6px
 			display: block
-		&::before
-			content: ''
-			width: 100%
-			height: 30px
-			display: block
-			left: 0
-			right: 0
-			position: absolute
-			bottom: 22px
-			background-color: rgba(#fff,.5);
+		&__bg
+			&::before
+				content: ''
+				width: 100%
+				height: 30px
+				display: block
+				left: 0
+				right: 0
+				position: absolute
+				bottom: 22px
+				background-color: rgba(#fff,.5);
 		&-button
-			padding: 0 20px
+			width: 116px
+			margin: 0 auto
 			background-color: #c7c4c9
 			border-radius: 2px 2px 0 0
-			display: inline-block
+			display: block
 			line-height: 21px
 			color: #515052
 			font-size: 14px
@@ -984,7 +999,7 @@ body
 	top: 60px
 	padding-bottom: 10px
 	display: none
-	z-index: 999
+	z-index: 997
 	.sidebar-menu
 		-webkit-box-shadow: none
 		-moz-box-shadow: none
@@ -1136,7 +1151,36 @@ body
 	right: 0
 	z-index: 998
 	background-color: #f2eff4
-	-webkit-box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.15)
-	-moz-box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.15)
-	box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.15)
+	-webkit-box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.15), inset 0px 5px 5px 0px rgba(0,0,0,0.15)
+	-moz-box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.15), inset 0px 5px 5px 0px rgba(0,0,0,0.15)
+	box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.15), inset 0px 5px 5px 0px rgba(0,0,0,0.15)
 	display: none
+.mob-arow__wrapper
+	width: 100%
+	position: absolute
+	left: 0
+	right: 0
+	top: 68px
+	z-index: 998
+	display: block
+	background-color: #f2eff4
+	-webkit-box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.15), inset 0px 5px 5px 0px rgba(0,0,0,0.15)
+	-moz-box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.15), inset 0px 5px 5px 0px rgba(0,0,0,0.15)
+	box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.15), inset 0px 5px 5px 0px rgba(0,0,0,0.15)
+	display: none
+	.pop-up__wrapper
+		padding-left: 2%
+		padding-right: 2%
+	.pop-up__button-wrapper
+		left: 2%
+		right: 2%
+	.pop-up__title
+		font-size: 18px
+		text-transform: none !important
+		font-family: "MuseoSansRegular", sans-serif
+	.pop-up__p
+		font-size: 14px
+.main-content__more-button-open
+	display: none
+.main-content__bslider-item a b:hover
+	text-decoration: underline
