--- a/sass/_custom.sass
+++ b/sass/_custom.sass
@@ -185,6 +185,7 @@ a
 		line-height: 100px
 		background-color: transparent
 		float: left
+		height: 11.3%
 	.slick-prev
 		border-right: 1px solid #c7c4c9 !important
 		&::after
@@ -261,3 +262,21 @@ a
 		text-decoration: underline
 .main-content__card-slider img
 	cursor: pointer
+
+.sidebar-menu__title-name-open::after
+	background-position: center !important
+	background-image: url(../img/arow-s-active.png) !important
+.sl2
+	overflow: hidden
+	height: 900px
+.main-content__bslider-item
+	margin-left: 0 !important
+	width: 404px !important
+.main-content__bslider
+	@extend .clearfix
+.bx-controls-direction
+	display: none !important
+.popup-img
+	.mfp-close
+		left: 0 !important
+		right: 0 !important
