--- a/sass/main.sass
+++ b/sass/main.sass
@@ -48,19 +48,19 @@ body
 			background-position: 0 0
 		&-2
 			background-position: -27px 0
-			width: 20px
+			width: 22px
 			height: 24px
 		&-3
 			background-position: -49px 0
-			width: 24px
+			width: 26px
 			height: 21px
 		&-4
 			background-position: -75px 0
-			width: 24px
+			width: 26px
 			height: 22px
 		&-5
 			background-position: -101px 0
-			width: 24px
+			width: 25px
 			height: 24px
 		&-6
 			background-position: -126px 0
@@ -283,8 +283,9 @@ body
 				padding-right: 20px
 				&::after
 					content: ''
-					background-image: url(../img/side-bar-icon.png)
-					background-position: left bottom
+					background-image: url(../img/arow-s.png)
+					background-position: center
+					background-repeat: no-repeat
 					width: 16px
 					height: 10px
 					position: absolute
@@ -321,7 +322,7 @@ body
 		margin-top: 21px
 		display: block
 		position: relative
-		&-p
+		p
 			line-height: 24px
 			color: #515052
 			margin-bottom: 10px
@@ -502,7 +503,7 @@ body
 			&-line
 				color: #333138
 				font-size: 16px
-				padding: 8px 0
+				padding: 2px 0
 				&-bold
 					font-family: "MuseoSansBold", sans-serif
 		&-bottom
@@ -698,7 +699,7 @@ body
 			content: ''
 			@include triangle(12px, #c7c4c9, down)
 			position: absolute
-			bottom: -9px
+			bottom: -7px
 			left: 50%
 			margin-left: -6px
 			display: block
@@ -748,8 +749,6 @@ body
 			display: none !important
 		&-item
 			display: inline-block
-			width: 58%
-			margin-left: 1%
 			margin-right: 1%
 		&-img
 			width: 404px
