--- a/app/css/main.css
+++ b/app/css/main.css
@@ -364,6 +364,12 @@ a:hover, a:active, a:focus {
   right: 0 !important;
 }
 
+.test {
+  display: block;
+  width: 100%;
+  height: 456px;
+}
+
 body {
   font-size: 16px;
   min-width: 320px;
