--- a/sass/_custom.sass
+++ b/sass/_custom.sass
@@ -280,3 +280,10 @@ a
 	.mfp-close
 		left: 0 !important
 		right: 0 !important
+
+.test
+	display: block
+	width: 100%
+	height: 456px
+
+.main-content__card-slider
